# sysprog_distributed_service

./: CMakeLists.txt
docker/: docker-compose.yml
docker/rabbitmq/: Dockerfile
src/: consumer.c  consumer.h  gateway.c  main.c  publisher.c  publisher.h  rmq_utils.c  rmq_utils.h  shared.h  worker_main.c
src/server/: routes.c  routes.h  urls.c  urls.h
src/worker/: worker.c  worker.h
